--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 export ROOT="${PWD}"
 
-use nix
+use flake || use nix
 watch_file .session_token
 watch_file .vim/coc-settings.part.json 
+watch_file shell.nix
